Update landing page

--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -2,15 +2,14 @@ section(class="canvas front" id="front")
 
     div(class="content")
 
-        h2 Headline
+        h2 Opt-Out Robot
 
         div
 
-            p Good spot for a tagline.
+            p Protect your rights. Opt out of nefarious Terms of Service provisions — automatically.
 
             div
-
-                a(href="#section-2") Button 1
-                a(href="#section-3") Button 2
+            
+                a(href="#section-2") Opt Me Out
 
     +nav-1("section-1")
