Break homepage into two lines

--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -6,7 +6,9 @@ section(class="canvas front" id="front")
 
         div
 
-            p Protect your rights. Opt out of nefarious Terms of Service provisions — automatically.
+            p Protect your rights.
+            
+            p Opt out of nefarious Terms of Service provisions — automatically.
 
             div
             
